2011-03-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_get_grub_dev): Add
	few potentially useful grub_util_info.

2011-03-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/lvm.c (grub_lvm_scan_device): Remove spurious \n.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (default): Use @example rather than nested
	itemized lists to avoid breaking gendocs.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Future): Update.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Environment): New chapter.
	(Changes from GRUB Legacy): Link to "Environment block" section for
	details of limitations.
	(Simple configuration): Likewise.  Link to documentation of gfxmode
	and gfxpayload variables from GRUB_GFXMODE and GRUB_GFXPAYLOAD
	respectively.
	(Shell-like scripting): Note that normal variables are stored in the
	environment.
	(gettext): Link to documentation of lang and locale_dir.
	(list_env): New section.
	(load_env): New section.
	(save_env): New section.

	(Reporting bugs): Fix typo.

2011-03-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Correctly use "terminal_input" and not "terminal" in
	the example.

2011-03-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (set_scancodes)
	[!GRUB_MACHINE_MIPS_YEELOONG && !GRUB_MACHINE_QEMU]: Use scancode set 1.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Menu-specific commands): Remove some semantics
	that were true in GRUB Legacy but not in GRUB 2.
	(submenu): New section.
	(false): New section.
	(read): New section.
	(true): New section.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Changes from GRUB Legacy): Minor proofreading.

2011-03-30  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Explain some of the
	current limitations of grub-mkconfig.
	Reported by: Leslie Rhorer.
